# termux-pip

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/tpip/: cli.py  config.py  utils.py
src/tpip/commands/: build.py  setup.py
