[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'termux-pip'
dynamic = ['version']
description = 'CLI tool to configure the termux-pypi index and compile statically linked wheels'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Utilities',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
]
license-files = ['LICENSE']
dependencies = [
]
authors = [
  {name = 'Loamfy', email = 'admin@loamfy.com'}
]

[tool.setuptools.dynamic]
version = {attr = 'tpip.__version__'}

[project.urls]
Homepage = 'https://github.com/termux-pypi/termux-pip'
Repository = 'https://github.com/termux-pypi/termux-pip'

[project.scripts]
tpip = 'tpip.cli:main'
